# general_service_amiantes

./: .env  Cargo.toml  README.md  schema.graphql
frontend/: .eslintrc.js  apollo.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  vite.config.ts  windi.config.ts
frontend/public/fonts/McLaren/: OFL.txt:Zone.Identifier
frontend/src/: App.tsx  App.vue  VueRouting.ts  index.css  main.ts  main.tsx  style.css
frontend/src/components/: AuthenticateUser.vue
frontend/src/components/admin/: DashboardClients.vue  DashboardHome.vue  DashboardWorksites.vue
frontend/src/components/admin/templates/: DashboardAside.vue  DashboardButton.vue  DashboardHeader.vue  DashboardMain.vue  DashboardTable.vue
frontend/src/gql/: Query.tsx
frontend/src/graphql/: AuthenticateUser.mutation.ts  Client.ts
frontend/src/models/: User.tsx
frontend/src/templates/: Header.tsx
informations/: 1463_001.pdf:Zone.Identifier  Matrice_Plomb Rev02.1.xlsm
migrations/00000000000001_users/: down.sql  up.sql
migrations/00000000000002_clients/: up.sql
migrations/00000000000003_worksites/: down.sql  up.sql
migrations/00001_users/: down.sql  up.sql
migrations/00002_clients/: down.sql  up.sql
migrations/00003_worksites/: down.sql  up.sql
src/: context.rs  database.rs  graphql.rs  main.rs  schema.rs
src/models/: clients.rs  mod.rs  users.rs  worksites.rs
