[package]
name = "general_service_amiantes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.1"
argon2 = "0.4.1"

chrono = { version = "0.4.19", features = ["serde"] }
ctrlc = "3.2.3"

diesel = { version = "1.4.8", features = ["r2d2", "postgres", "chrono", "serde_json"]}
diesel_json = "0.1.1"
dotenv = "0.15.0"

env_logger = "0.9.0"

log = "0.4.17"

lopdf = "0.27.0"

futures = "0.3.21"

juniper = "0.15.9"
juniper_codegen = "0.15.9"
juniper_actix = "0.4.0"

serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"

r2d2 = "0.8.10"

tokio = "1.20.1"